# personalized-outreach-crew

./: README.md  personalized_email.md  prospect.json  pyproject.toml  requirements.txt  streamlit_app.py
src/sales_personalized_email/: crew.py  main.py
